fixed build to be compatible with Java 8